--- a/direwolf/Gemfile
+++ b/direwolf/Gemfile
@@ -27,6 +27,10 @@ gem 'turbolinks'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 gem 'jbuilder', '~> 1.2'
 
+# Add google OAuth2 integration read more at  https://developers.google.com/console/help/new/#generatingoauth2
+# and http://richonrails.com/articles/google-authentication-in-ruby-on-rails
+gem 'omniauth-google-oauth2', '~> 0.2.1'
+
 group :doc do
   # bundle exec rake doc:rails generates the API under doc/api.
   gem 'sdoc', require: false
