--- a/direwolf/.gitignore
+++ b/direwolf/.gitignore
@@ -6,11 +6,12 @@
 
 # Ignore bundler config.
 /.bundle
+/Gemfile.lock
 
 # Ignore the default SQLite database.
 /db/*.sqlite3
 /db/*.sqlite3-journal
-
+/db/migrate
 # Ignore all logfiles and tempfiles.
 /log/*.log
 /tmp
