--- a/direwolf/Gemfile
+++ b/direwolf/Gemfile
@@ -1,5 +1,8 @@
 source 'https://rubygems.org'
 
+# Use tags
+gem 'acts-as-taggable-on'
+
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.0.0'
 
