--- a/direwolf/Gemfile
+++ b/direwolf/Gemfile
@@ -38,6 +38,12 @@ gem 'omniauth-google-oauth2', '~> 0.2.1'
 # refer https://github.com/matthuhiggins/foreigner
 gem 'foreigner'
 
+gem 'bootstrap-sass'
+
+gem 'momentjs-rails', '>= 2.8.1'
+
+gem 'bootstrap3-datetimepicker-rails', '~> 3.1.3'
+
 group :doc do
   # bundle exec rake doc:rails generates the API under doc/api.
   gem 'sdoc', require: false
