--- a/direwolf/Gemfile
+++ b/direwolf/Gemfile
@@ -10,7 +10,10 @@ gem 'acts-as-taggable-on'
 gem 'rails', '4.0.0'
 
 # Use sqlite3 as the database for Active Record
-gem 'sqlite3'
+#gem 'sqlite3'
+
+# Use postgresql as the database for Active Record
+gem 'pg'
 
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 4.0.0'
@@ -41,12 +44,16 @@ gem 'omniauth-google-oauth2', '~> 0.2.1'
 # refer https://github.com/matthuhiggins/foreigner
 gem 'foreigner'
 
-gem 'bootstrap-sass'
+gem 'bootstrap-sass', '~> 3.2.0'
 
 gem 'momentjs-rails', '>= 2.8.1'
 
 gem 'bootstrap3-datetimepicker-rails', '~> 3.1.3'
 
+gem 'autoprefixer-rails'
+
+gem 'less-rails'
+gem 'therubyracer'
 group :doc do
   # bundle exec rake doc:rails generates the API under doc/api.
   gem 'sdoc', require: false
