--- a/direwolf/Gemfile
+++ b/direwolf/Gemfile
@@ -10,10 +10,10 @@ gem 'acts-as-taggable-on'
 gem 'rails', '4.0.0'
 
 # Use sqlite3 as the database for Active Record
-#gem 'sqlite3'
+gem 'sqlite3'
 
 # Use postgresql as the database for Active Record
-gem 'pg'
+#gem 'pg'
 
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 4.0.0'
