--- a/direwolf/test/fixtures/jobs.yml
+++ b/direwolf/test/fixtures/jobs.yml
@@ -4,8 +4,14 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
+one:
+  title: A Job Title
+  employer_id: emp1_id
+  category_id: 1
 # column: value
 #
-two: {}
+two:
+  title: Another Job Title
+  employer_id: emp1_id
+  category_id: 2
 #  column: value
